# coil

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
scripts/: pre-commit.sh
src/: cli.rs  lib.rs  main.rs  network.rs  telemetry.rs  utils.rs
src/network/: signals.rs
