[package]
name = "coil"
version = "0.0.1"
edition = "2021"
description = "Cross-platform, distributed messaging service"
authors = ["Peter Donovan <1cd61v9j6@mozmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
color-eyre = "0.6"
eyre = "0.6"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
libp2p = { version = "0.49.0", features = ["full"] }

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["env-filter", "fmt", "time", "ansi", "local-time"]

[dependencies.tokio]
version = "1"
features = ["full"]

[profile.dev]
# Remove debug information for faster builds during development.
debug = 0
