[package]
name = "coil"
version = "0.0.1"
edition = "2021"
description = "Cross-platform, distributed messaging service"
authors = ["Peter Donovan <1cd61v9j6@mozmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
eyre = "0.6"
tracing = "0.1"
futures = "0.3"

[dependencies.libp2p]
git = "https://github.com/libp2p/rust-libp2p"
branch = "master"
features = [
    "dns",
    "floodsub",
    "identify",
    "macros",
    "mdns",
    "metrics",
    "mplex",
    "noise",
    "pnet",
    "serde",
    "tcp",
    "tls",
    "tokio",
    "websocket",
    "yamux",
]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["env-filter", "fmt", "time", "ansi", "local-time"]

[dependencies.tokio]
version = "1"
features = ["full"]

[profile.dev]
# Remove debug information for faster builds during development.
debug = 0
