[package]
name = "coil"
version = "0.0.1"
edition = "2021"
description = "Cross-platform, distributed messaging service"
authors = ["Peter Donovan <1cd61v9j6@mozmail.com>"]
default-run = "swarm"

[lib]
path = "./src/lib.rs"

[[bin]]
name = "swarm"
path = "./src/bin/swarm.rs"

# TODO: Feature-gate dependencies for less bloated builds
# TODO: Add platform-specific APIs for Linux and MacOS

[dependencies]
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
tracing = "0.1"

[dependencies.libp2p]
version = "0.50"
features = [
    "dns",
    "gossipsub",
    "identify",
    "macros",
    "mdns",
    "metrics",
    "mplex",
    "noise",
    "pnet",
    "quic",
    "serde",
    "tcp",
    "tls",
    "tokio",
    "websocket",
    "yamux",
]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "env-filter", "fmt", "time"]

[dependencies.tokio]
version = "1"
features = ["full"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_System_Console",
]

[profile.dev]
# Remove debug information for faster builds during development.
debug = 0
